feat: agregar página de ayuda y enlazar en el menú de navegación
